syntax = "proto3";
option java_package = "tech.lmru.cdsrfp.service";
option java_multiple_files = true;

//package deliveryservice;

import "common.proto";
import "stores.proto";

enum DeliveryStatusEnum {
    NEW = 0;
    APPROVED = 1;
    ONDELIVERY = 2;
    DELIVERED = 3;
    PARTIALLYDELIVERED = 4;
    RETURNONDELIVERY = 5;
    CANCELLED = 6;
}

message Delivery {
    int64 id = 1;
    double lat = 2;
    double lon = 3;
    string timeWindow = 4;
    User createUser = 5;
    string createdDate = 6;
    User lastUpdateUser = 7;
    string lastUpdateDate = 8;
    DeliveryStatusEnum status = 9;
    string deliveryDateMin = 10;
    string deliveryDateMax = 11;
    string comment = 12;
    string city = 13;
    string street = 14;
    string house = 15;
    string entrance = 16;
    string flat = 17;
    Store store = 18;
    string fullName = 19;
    string external = 20;
    string zone = 21;
    string metroStation = 22;
    string floor = 23;
    string company = 24;
    string phone = 25;
    string phoneSecondary = 26;
    string email = 27;
    string unloadType = 28;
    string paymentStatus = 29;
    string paper = 30;
    string consignee = 31;
}

message DeliveryItem {
    int64 id = 1;
    string productLMCode = 2;
    string productLMName = 3;
    double weight = 4;
    double height = 5;
    double width = 6;
    double length = 7;
    double quantity = 8;
    double loadedQuantity = 9;
    double approvedQuantity = 10;
    DeliveryStatusEnum status = 11;
}

message User {
    int32 id = 1;
    string name = 3;
}


message DeliveryAllResponse {
    repeated Delivery deliveries = 1;
}

message DeliveryItemAllResponse {
    repeated DeliveryItem items = 1;
}

message DeliveryIdRequest {
    int64 id = 1;
}

message DeliveryChangeStatusResponse {
    bool success = 1;
}

message DeliveryStatusChangeRequest {
    repeated int64 listId = 1;
    DeliveryStatusEnum newStatus = 2;
}

service DeliveryService {
    rpc readAllDelivery(Empty) returns (DeliveryAllResponse);
    rpc readAllDeliveryItemForDeliveryById(DeliveryIdRequest) returns (DeliveryItemAllResponse);
    rpc changeStatusDelivery(DeliveryStatusChangeRequest) returns (DeliveryChangeStatusResponse);
}



